-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 9
-
Component/s: hotspot
-
b42
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8083512 | emb-9 | Erik Helin | P1 | Resolved | Fixed | team |
| JDK-8320455 | 8u411 | Daniel Skantz | P1 | Closed | Fixed | b01 |
# Internal Error (/opt/jprt/T/P1/123553.stefank/s/hotspot/src/os/solaris/vm/os_solaris.cpp:3112), pid=20911, tid=2
# assert(is_valid_page_size(align)) failed: 524288 is not a valid page size
From the stack trace:
V [libjvm.so+0x1914c12] bool os::Solaris::setup_large_pages(char*,unsigned long,unsigned long)+0x112;; __1cCosHSolarisRsetup_large_pages6FpcLL_b_+0x112
V [libjvm.so+0x1865067] void MutableNUMASpace::bias_region(MemRegion,int)+0x117;; __1cQMutableNUMASpaceLbias_region6MnJMemRegion_i_v_+0x117
V [libjvm.so+0x1867866] void MutableNUMASpace::initialize(MemRegion,bool,bool,bool)+0x476;; __1cQMutableNUMASpaceKinitialize6MnJMemRegion_bbb_v_+0x476
V [libjvm.so+0x1a05db4] void PSYoungGen::set_space_boundaries(unsigned long,unsigned long)+0x114;; __1cKPSYoungGenUset_space_boundaries6MLL_v_+0x114
V [libjvm.so+0x1a056ee] void PSYoungGen::initialize_work()+0xcfe;; __1cKPSYoungGenPinitialize_work6M_v_+0xcfe
V [libjvm.so+0xb98cdf] AdjoiningGenerations::AdjoiningGenerations #Nvariant 1(ReservedSpace,GenerationSizer*,unsigned long)+0x45f;; __1cUAdjoiningGenerations2t6MnNReservedSpace_pnPGenerationSizer_L_v_+0x45f
V [libjvm.so+0x19533af] int ParallelScavengeHeap::initialize()+0x3af;; __1cUParallelScavengeHeapKinitialize6M_i_+0x3af
V [libjvm.so+0x1be56f3] int Universe::initialize_heap()+0x1d3;; __1cIUniversePinitialize_heap6F_i_+0x1d3
# assert(is_valid_page_size(align)) failed: 524288 is not a valid page size
From the stack trace:
V [libjvm.so+0x1914c12] bool os::Solaris::setup_large_pages(char*,unsigned long,unsigned long)+0x112;; __1cCosHSolarisRsetup_large_pages6FpcLL_b_+0x112
V [libjvm.so+0x1865067] void MutableNUMASpace::bias_region(MemRegion,int)+0x117;; __1cQMutableNUMASpaceLbias_region6MnJMemRegion_i_v_+0x117
V [libjvm.so+0x1867866] void MutableNUMASpace::initialize(MemRegion,bool,bool,bool)+0x476;; __1cQMutableNUMASpaceKinitialize6MnJMemRegion_bbb_v_+0x476
V [libjvm.so+0x1a05db4] void PSYoungGen::set_space_boundaries(unsigned long,unsigned long)+0x114;; __1cKPSYoungGenUset_space_boundaries6MLL_v_+0x114
V [libjvm.so+0x1a056ee] void PSYoungGen::initialize_work()+0xcfe;; __1cKPSYoungGenPinitialize_work6M_v_+0xcfe
V [libjvm.so+0xb98cdf] AdjoiningGenerations::AdjoiningGenerations #Nvariant 1(ReservedSpace,GenerationSizer*,unsigned long)+0x45f;; __1cUAdjoiningGenerations2t6MnNReservedSpace_pnPGenerationSizer_L_v_+0x45f
V [libjvm.so+0x19533af] int ParallelScavengeHeap::initialize()+0x3af;; __1cUParallelScavengeHeapKinitialize6M_i_+0x3af
V [libjvm.so+0x1be56f3] int Universe::initialize_heap()+0x1d3;; __1cIUniversePinitialize_heap6F_i_+0x1d3
- backported by
-
JDK-8083512 Bad page size passed to setup_large_pages() on Solaris
-
- Resolved
-
-
JDK-8320455 Bad page size passed to setup_large_pages() on Solaris
-
- Closed
-
- relates to
-
JDK-8063110 Add UseLargePages to TestNUMAPageSize
-
- Closed
-