8061467: Bad page size passed to setup_large_pages() on Solaris

Reviewed-by: tschatzl, mgerdin